<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perrygarg.khanapeena.home.activity.HomeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_left_home"
            android:layout_marginLeft="@dimen/margin_left_home"
            android:layout_marginRight="@dimen/margin_left_home"
            android:layout_marginTop="@dimen/margin_left_home"
            card_view:cardCornerRadius="@dimen/margin_left_home"
            card_view:contentPadding="15dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/header_text"
                    android:textSize="16dp" />

                <FrameLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardview_default_radius">

                        <com.perrygarg.khanapeena.common.util.DelayAutocompleteTextView
                            android:id="@+id/train"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:hint="@string/train_name_or_number"
                            android:layout_gravity="center_vertical"
                            android:maxLines="1"
                            android:textSize="14dp"
                            android:paddingRight="@dimen/margin_left_home"
                            android:imeOptions="flagNoExtractUi|actionSearch"/>

                        <ProgressBar
                            android:id="@+id/train_progress_bar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|right"
                            android:layout_marginRight="@dimen/cardview_default_radius"
                            android:visibility="invisible" />


                </FrameLayout>

                <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="2dp"
                        android:weightSum="1">

                        <AutoCompleteTextView
                            android:id="@+id/meal_station"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:hint="@string/meal_station"
                            android:singleLine="true"
                            android:textSize="14dp" />

                        <ProgressBar
                            android:id="@+id/meal_station_progress_bar"
                            android:layout_width="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="30dp"
                            android:visibility="invisible" />

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="8dp">

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:singleLine="true"
                        android:textSize="14dp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/proceed_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/selector__button_proceed"
                    android:gravity="center"
                    android:text="@string/proceed"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />
                <!-- <include
                     android:id="@+id/proceedLayout"
                     layout="@layout/custom_button" />-->
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
